Done more individual pages and main pages, addded more pictures

--- a/culture.html
+++ b/culture.html
@@ -9,38 +9,126 @@
 </head>
 
 <body>
-  <header>
-    <div class="header-content-wrapper">
-      <h1 class="page-title">World Magazine</h1>
-      <nav class="top-nav-container">
-        <ul>
-          <li><a>Search</a></li>
-          <li><a>Log In</a></li>
-          <li><a>Magazine</a></li>
-          <li><a>Newsletter</a></li>
-          <li><a>About Us</a></li>
-        </ul>
-      </nav>
-      <nav class="bottom-nav-container">
-        <ul>
-          <li><a href="/index.html">HOME</a></li>
-          <li><a href="/sports.html">SPORTS</a></li>
-          <li><a href="/culture.html">CULTURE</a></li>
-          <li><a href="/politics.html">POLITICS</a></li>
-          <li><a href="/tech.html">TECH</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <div class="entire-page-wrapper">
+    <header>
+      <div class="header-content-wrapper">
+        <h1 class="page-title">World Magazine</h1>
+        <nav class="top-nav-container">
+          <ul>
+            <li><a>Search</a></li>
+            <li><a>Log In</a></li>
+            <li><a>Magazine</a></li>
+            <li><a>Newsletter</a></li>
+            <li><a>About Us</a></li>
+          </ul>
+        </nav>
+        <nav class="bottom-nav-container">
+          <ul>
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/sports.html">SPORTS</a></li>
+            <li><a href="/culture.html">CULTURE</a></li>
+            <li><a href="/politics.html">POLITICS</a></li>
+            <li><a href="/tech.html">TECH</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-  <footer>
-    <div class="footer-content-wrapper">
-      <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-      <h1 class="footer-title">World Magazine</h1>
-      <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+    <main>
+      <div class="site-wrapper">
+        <div class="main-content-wrapper">
 
-    </div>
-  </footer>
+          <div class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="individualstories/museumstory.html">
+                <h2 class="story-title">Record number of people visited the National history museum</h2>
+                <span class="story-info">
+                  This year the American Museum of Natural History has seen an increese in visitors by 14%. <br> A
+                  record
+                  number of tickets for children has been sold already this year. <br>
+                  Museum likely to end the year with red numbers anyway.
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/culture.html">Culture</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="pictures/museum.jpg" alt="museum">
+              <figcaption class="story-caption">American Museum of Natural History</figcaption>
+            </figure>
+          </div>
+
+          <div class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="individualstories/comicconstory.html">
+                <h2 class="story-title">Comic-Con South Africa: Top culture festival showcases homegrown superheroes
+                </h2>
+                <span class="story-info">
+                  In a vibrant celebration of pop culture, Comic-Con South Africa took center stage, bringing to light a
+                  plethora of homegrown superheroes and fantastical worlds.
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/culture.html">Culture</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="pictures/comiccon.jpg" alt="comiccon">
+              <figcaption class="story-caption">
+                Comic Con in South Africa
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="individualstories/royalalbertstory.html">
+                <h2 class="story-title">
+                  Royal Albert Hall Embarks on Transformation
+                </h2>
+                <span class="story-info">
+                  In a bold and ambitious endeavor, the Royal Albert Hall, a beloved and iconic venue, has embarked on a
+                  journey of transformation and revitalization. The historic hall, known for its grandeur and rich
+                  cultural heritage, is undergoing a comprehensive redevelopment to ensure its continued prominence on
+                  the world stage.
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/culture.html">Culture</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="pictures/royalalberthall.jpg" alt="Royal Albert Hall">
+              <figcaption class="story-caption">
+                Royal Albert Hall
+              </figcaption>
+            </figure>
+          </div>
+
+        </div>
+      </div>
+    </main>
+
+
+    <footer>
+      <div class="footer-content-wrapper">
+        <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+        <h1 class="footer-title">World Magazine</h1>
+        <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
