--- a/index.html
+++ b/index.html
@@ -98,11 +98,8 @@
                 <h2 class="story-title">
                   Spain beats England 1-0 in the finals of the world cup
                 </h2>
-                <span class="story-info">The womens world cup is over and Spain stands at the end as
-                  the winner. Carmona scored an early goal for Spain and England
-                  never found a way to turn the tables. <br> "The determination and
-                  dedication to play everyday, as hard as these girls has done
-                  for the entire world cup is astonishing" -- Carlos Puyol
+                <span class="story-info">In a historic clash on the global stage of women's football, Spain emerged
+                  victorious, securing a remarkable 1-0 win against England in the final of the Women's World Cup.
                 </span>
               </a>
               <div class="author-catagory-info">
@@ -195,7 +192,7 @@
             <div class="breaking-story breaking-second">
               <div class="breaking-text-wrapper">
                 <h3 class="breaking-story-title">
-                  Trump charged with 420 counts of fraud
+                  Trump charged with 19 counts of fraud
                 </h3>
                 <p class="breaking-time">25 minutes ago</p>
               </div>
