--- a/individualstories/duplantisstory.html
+++ b/individualstories/duplantisstory.html
@@ -5,42 +5,105 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Politics</title>
+    <title>Duplantis</title>
 </head>
 
 <body>
-    <header>
-        <div class="header-content-wrapper">
-            <h1 class="page-title">World Magazine</h1>
-            <nav class="top-nav-container">
-                <ul>
-                    <li><a>Search</a></li>
-                    <li><a>Log In</a></li>
-                    <li><a>Magazine</a></li>
-                    <li><a>Newsletter</a></li>
-                    <li><a>About Us</a></li>
-                </ul>
-            </nav>
-            <nav class="bottom-nav-container">
-                <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/sports.html">SPORTS</a></li>
-                    <li><a href="/culture.html">CULTURE</a></li>
-                    <li><a href="/politics.html">POLITICS</a></li>
-                    <li><a href="/tech.html">TECH</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="entire-page-wrapper">
+        <header>
+            <div class="header-content-wrapper">
+                <h1 class="page-title">World Magazine</h1>
+                <nav class="top-nav-container">
+                    <ul>
+                        <li><a>Search</a></li>
+                        <li><a>Log In</a></li>
+                        <li><a>Magazine</a></li>
+                        <li><a>Newsletter</a></li>
+                        <li><a>About Us</a></li>
+                    </ul>
+                </nav>
+                <nav class="bottom-nav-container">
+                    <ul>
+                        <li><a href="/index.html">HOME</a></li>
+                        <li><a href="/sports.html">SPORTS</a></li>
+                        <li><a href="/culture.html">CULTURE</a></li>
+                        <li><a href="/politics.html">POLITICS</a></li>
+                        <li><a href="/tech.html">TECH</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <footer>
-        <div class="footer-content-wrapper">
-            <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-            <h1 class="footer-title">World Magazine</h1>
-            <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
 
-        </div>
-    </footer>
+        <main>
+            <div class="individual-site-wrapper">
+                <div class="individual-story duplantis-story">
+                    <h2 class="individual-title">Duplantis jumps higher then ever before</h2>
+                    <img src="/pictures/duplantis.jpg" alt="duplantis">
+                    <p class="sub-title-text">In a display of extraordinary athleticism and unwavering determination,
+                        pole vaulter Armand Duplantis has shattered records, propelling himself to unparalleled heights.
+                        Scaling the bar at a remarkable 6.23 meters</p>
+
+                    <h3 class="article-title">Introduction</h3>
+                    <p class="article-text">In a remarkable display of skill and determination, pole vaulter Armand
+                        Duplantis has shattered his own world record once more. Soaring to an astonishing height of 6.23
+                        meters, Duplantis has cemented his status as a pole vaulting legend. This article celebrates his
+                        incredible feat and explores the impact of this new record on the world of athletics.</p>
+
+                    <h3 class="article-title">Breaking Boundaries: Armand Duplantis's Feat</h3>
+                    <p class="article-text">Armand Duplantis, a name synonymous with excellence in pole vaulting, has
+                        once again pushed the boundaries of human performance. With a leap that defies gravity, he
+                        ascended to a height of 6.23 meters, surpassing his previous world record and setting a new
+                        standard for the sport.</p>
+
+                    <h3 class="article-title">A Career Defined by Success</h3>
+                    <p class="article-text">Duplantis's career trajectory has been nothing short of extraordinary. His
+                        journey in the world of pole vaulting has been characterized by consistent success and a
+                        relentless pursuit of perfection. From a young age, he showcased immense potential, and over the
+                        years, he has refined his technique, strength, and mental fortitude, propelling himself to the
+                        pinnacle of the sport.</p>
+
+                    <h3 class="article-title">The Pursuit of Excellence: A Champion's Mindset</h3>
+                    <p class="article-text">Duplantis's pursuit of excellence is a testament to his dedication and love
+                        for the sport. He has honed his skills through grueling training sessions, unwavering
+                        discipline, and a fierce competitive spirit. His determination to continuously challenge himself
+                        has led to multiple world records, including this groundbreaking leap of 6.23 meters.</p>
+
+                    <h3 class="article-title">Inspiring a Generation: Duplantis as a Role Model</h3>
+                    <p class="article-text">As a record-breaking athlete, Armand Duplantis serves as an inspiration to
+                        aspiring pole vaulters and athletes around the world. His accomplishments motivate a new
+                        generation to believe in their potential, strive for greatness, and dream big. Duplantis's
+                        journey demonstrates that with hard work, perseverance, and dedication, one can achieve their
+                        goals and etch their name in the annals of sports history.</p>
+
+                    <h3 class="article-title">Shaping the Future of Pole Vaulting</h3>
+                    <p class="article-text">Duplantis's latest record sets the stage for the future of pole vaulting. It
+                        raises the bar and challenges fellow athletes to reach new heights. As the sport evolves and
+                        competitors aim to surpass this remarkable record, the excitement and anticipation for what lies
+                        ahead in pole vaulting are palpable.</p>
+
+
+                    <h3 class="article-title">Conclusion</h3>
+                    <p class="article-text">Armand Duplantis's extraordinary feat of breaking his own world record in
+                        pole vaulting, reaching an astounding height of 6.23 meters, has captured the imagination of the
+                        sporting world. His achievement is a testament to the human spirit, resilience, and the pursuit
+                        of excellence. Duplantis has etched his name in the record books and has inspired a generation
+                        of athletes to chase their dreams and aim for unparalleled heights in their respective sports.
+                    </p>
+
+                </div>
+            </div>
+        </main>
+
+        <footer>
+            <div class="footer-content-wrapper">
+                <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+                <h1 class="footer-title">World Magazine</h1>
+                <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
