--- a/individualstories/earthquakestory.html
+++ b/individualstories/earthquakestory.html
@@ -5,42 +5,101 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Politics</title>
+    <title>Earthquake</title>
 </head>
 
 <body>
-    <header>
-        <div class="header-content-wrapper">
-            <h1 class="page-title">World Magazine</h1>
-            <nav class="top-nav-container">
-                <ul>
-                    <li><a>Search</a></li>
-                    <li><a>Log In</a></li>
-                    <li><a>Magazine</a></li>
-                    <li><a>Newsletter</a></li>
-                    <li><a>About Us</a></li>
-                </ul>
-            </nav>
-            <nav class="bottom-nav-container">
-                <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/sports.html">SPORTS</a></li>
-                    <li><a href="/culture.html">CULTURE</a></li>
-                    <li><a href="/politics.html">POLITICS</a></li>
-                    <li><a href="/tech.html">TECH</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="entire-page-wrapper">
+        <header>
+            <div class="header-content-wrapper">
+                <h1 class="page-title">World Magazine</h1>
+                <nav class="top-nav-container">
+                    <ul>
+                        <li><a>Search</a></li>
+                        <li><a>Log In</a></li>
+                        <li><a>Magazine</a></li>
+                        <li><a>Newsletter</a></li>
+                        <li><a>About Us</a></li>
+                    </ul>
+                </nav>
+                <nav class="bottom-nav-container">
+                    <ul>
+                        <li><a href="/index.html">HOME</a></li>
+                        <li><a href="/sports.html">SPORTS</a></li>
+                        <li><a href="/culture.html">CULTURE</a></li>
+                        <li><a href="/politics.html">POLITICS</a></li>
+                        <li><a href="/tech.html">TECH</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <footer>
-        <div class="footer-content-wrapper">
-            <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-            <h1 class="footer-title">World Magazine</h1>
-            <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+        <main>
+            <div class="individual-site-wrapper">
+                <div class="individual-story earthquake-story">
+                    <h2 class="individual-title">More than 100 killed in Mexico earthquake</h2>
+                    <img src="/pictures/mexicoearthquake.jpg" alt="earthquake">
+                    <p class="sub-title-text">A Devastating Natural Disaster Shakes Mexico, Leaving a Trail of
+                        Destruction and Loss</p>
 
-        </div>
-    </footer>
+                    <h3 class="article-title">Introduction</h3>
+                    <p class="article-text">In a harrowing turn of events, Mexico has been struck by a powerful
+                        earthquake that has claimed the lives of more than 100 people. This article aims to shed light
+                        on the extent of the devastation, the ongoing rescue efforts, and the collective efforts to
+                        support and rebuild the affected communities.</p>
+
+                    <h3 class="article-title">The Earthquake's Impact: Unfolding Tragedy</h3>
+                    <p class="article-text">The earthquake, which struck with devastating force, has left a trail of
+                        destruction across various regions of Mexico. The loss of lives, injuries, and damage to
+                        infrastructure have plunged the nation into mourning and necessitated urgent rescue and relief
+                        operations.</p>
+
+                    <h3 class="article-title">The Toll on Lives: A Grief-Stricken Nation</h3>
+                    <p class="article-text">The loss of over 100 lives is an incomprehensible tragedy, leaving families
+                        shattered and communities in mourning. Each life lost is a story, a dream, and a potential that
+                        will forever be missed. As the nation grapples with this heart-wrenching loss, the resilience
+                        and unity of the Mexican people become a source of strength and hope.</p>
+
+                    <h3 class="article-title">Rescue Efforts: A Race Against Time</h3>
+                    <p class="article-text">In the wake of this catastrophic earthquake, rescue teams, volunteers, and
+                        emergency services are working tirelessly to locate and rescue survivors trapped under the
+                        rubble. Every second counts in these crucial hours, and the collective efforts are aimed at
+                        minimizing casualties and providing aid to those in need.</p>
+
+                    <h3 class="article-title">International Support: Standing in Solidarity</h3>
+                    <p class="article-text">The global community has extended its support and solidarity to Mexico
+                        during this challenging time. Offers of assistance, expertise, and resources are pouring in from
+                        various nations, emphasizing the spirit of international unity and cooperation in the face of
+                        adversity.</p>
+
+                    <h3 class="article-title">Rebuilding Lives: A Long Road Ahead</h3>
+                    <p class="article-text">As the immediate crisis subsides, attention will shift towards the long and
+                        arduous process of rebuilding. The reconstruction efforts will encompass not only physical
+                        infrastructure but also the healing and rehabilitation of the affected communities. The road to
+                        recovery will be a collective endeavor, requiring sustained support and resources.</p>
+
+                    <h3 class="article-title">Conclusion</h3>
+                    <p class="article-text">The earthquake in Mexico has left an indelible mark of sorrow and
+                        devastation. The loss of more than 100 lives is a somber reminder of the unpredictability of
+                        natural disasters and their profound impact on communities. As Mexico comes together to support
+                        those affected and rebuild what has been lost, the resilience and strength of its people shine
+                        through. The nation stands united, drawing hope and courage from the solidarity shown by the
+                        global community. In this dark hour, the compassion, support, and determination of all will pave
+                        the way towards healing and recovery for Mexico.</p>
+
+                </div>
+            </div>
+        </main>
+
+        <footer>
+            <div class="footer-content-wrapper">
+                <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+                <h1 class="footer-title">World Magazine</h1>
+                <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
