--- a/individualstories/museumstory.html
+++ b/individualstories/museumstory.html
@@ -5,42 +5,110 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Politics</title>
+    <title>Museum</title>
 </head>
 
 <body>
-    <header>
-        <div class="header-content-wrapper">
-            <h1 class="page-title">World Magazine</h1>
-            <nav class="top-nav-container">
-                <ul>
-                    <li><a>Search</a></li>
-                    <li><a>Log In</a></li>
-                    <li><a>Magazine</a></li>
-                    <li><a>Newsletter</a></li>
-                    <li><a>About Us</a></li>
-                </ul>
-            </nav>
-            <nav class="bottom-nav-container">
-                <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/sports.html">SPORTS</a></li>
-                    <li><a href="/culture.html">CULTURE</a></li>
-                    <li><a href="/politics.html">POLITICS</a></li>
-                    <li><a href="/tech.html">TECH</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="entire-page-wrapper">
+        <header>
+            <div class="header-content-wrapper">
+                <h1 class="page-title">World Magazine</h1>
+                <nav class="top-nav-container">
+                    <ul>
+                        <li><a>Search</a></li>
+                        <li><a>Log In</a></li>
+                        <li><a>Magazine</a></li>
+                        <li><a>Newsletter</a></li>
+                        <li><a>About Us</a></li>
+                    </ul>
+                </nav>
+                <nav class="bottom-nav-container">
+                    <ul>
+                        <li><a href="/index.html">HOME</a></li>
+                        <li><a href="/sports.html">SPORTS</a></li>
+                        <li><a href="/culture.html">CULTURE</a></li>
+                        <li><a href="/politics.html">POLITICS</a></li>
+                        <li><a href="/tech.html">TECH</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <footer>
-        <div class="footer-content-wrapper">
-            <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-            <h1 class="footer-title">World Magazine</h1>
-            <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
 
-        </div>
-    </footer>
+
+        <main>
+            <div class="individual-site-wrapper">
+                <div class="individual-story museum-story">
+                    <h2 class="individual-title">Record Number of People Visited the National History Museum</h2>
+                    <img src="/pictures/museum.jpg" alt="museum">
+                    <p class="sub-title-text">This year the American Museum of Natural History has seen an increase in
+                        visitors by 14%.
+                        A record number of tickets for children has been sold already this year.
+                        Museum likely to end the year with red numbers anyway.</p>
+
+                    <h3 class="article-title">Introduction</h3>
+                    <p class="article-text">The American Museum of Natural History is currently basking in the glow of a
+                        significant achievement—a record-breaking surge in visitor numbers. Despite facing financial
+                        challenges, this article celebrates the museum's accomplishment, delving into the factors
+                        contributing to this success and the potential financial outlook for the year.</p>
+
+                    <h3 class="article-title">Unprecedented Foot Traffic: Breaking the Records</h3>
+                    <p class="article-text">This year has witnessed an extraordinary increase in visitors at the
+                        American Museum of Natural History, breaking all previous records. The surge in attendance, a
+                        remarkable 14% higher than previous years, demonstrates the enduring allure and significance of
+                        the nation's historical and cultural heritage housed within the museum's walls.</p>
+
+                    <h3 class="article-title">A Focus on the Future: Attracting a Diverse Audience</h3>
+                    <p class="article-text">The museum's ability to captivate a diverse audience has been key to its
+                        soaring popularity. People of all ages and backgrounds have been drawn to its exhibits, events,
+                        and educational programs. Notably, a record number of children's tickets have been sold this
+                        year, underlining the museum's success in engaging the younger generation and sparking their
+                        interest in science and history.</p>
+
+                    <h3 class="article-title">Educational Enrichment: Fostering Learning and Discovery</h3>
+                    <p class="article-text">The American Museum of Natural History stands as an educational beacon,
+                        attracting students and educators eager to enhance their learning beyond the classroom. The
+                        museum's guided tours, interactive displays, and immersive experiences have made history and
+                        science come alive, enriching the educational journey for countless visitors.</p>
+
+                    <h3 class="article-title">Financial Challenges: Navigating the Fiscal Landscape</h3>
+                    <p class="article-text">While celebrating this surge in attendance, the museum is not without
+                        financial concerns. Despite the remarkable increase in visitors and ticket sales, the American
+                        Museum of Natural History still faces the daunting possibility of ending the year with a
+                        deficit. Economic challenges, operational costs, and the impacts of the pandemic continue to
+                        pose financial obstacles that demand innovative strategies to ensure the museum's sustainability
+                        and continued growth.</p>
+
+                    <h3 class="article-title">Future Resilience: Adapting and Thriving</h3>
+                    <p class="article-text">As the year progresses, the American Museum of Natural History remains
+                        dedicated to adapting and thriving amidst financial challenges. It is imperative for the
+                        institution to sustain and build upon this remarkable surge in attendance, leveraging its
+                        educational and community-focused initiatives. By doing so, the museum can secure its role as a
+                        hub for learning, exploration, and cultural enrichment for years to come.</p>
+
+                    <h3 class="article-title">Conclusion</h3>
+                    <p class="article-text">The record-breaking surge in visitor numbers at the American Museum of
+                        Natural History is a testament to the museum's enduring appeal and the importance of its mission
+                        in society. This remarkable achievement, especially in a challenging financial landscape,
+                        highlights the fundamental role the museum plays in fostering education, promoting cultural
+                        enrichment, and captivating the hearts and minds of the public. As the year progresses, the
+                        museum remains committed to navigating financial challenges and ensuring its ability to continue
+                        serving as a beacon of knowledge and inspiration for generations to come.</p>
+
+                </div>
+            </div>
+        </main>
+
+
+        <footer>
+            <div class="footer-content-wrapper">
+                <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+                <h1 class="footer-title">World Magazine</h1>
+                <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
