--- a/individualstories/nasamarsstory.html
+++ b/individualstories/nasamarsstory.html
@@ -5,42 +5,124 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Politics</title>
+    <title>NASA</title>
 </head>
 
 <body>
-    <header>
-        <div class="header-content-wrapper">
-            <h1 class="page-title">World Magazine</h1>
-            <nav class="top-nav-container">
-                <ul>
-                    <li><a>Search</a></li>
-                    <li><a>Log In</a></li>
-                    <li><a>Magazine</a></li>
-                    <li><a>Newsletter</a></li>
-                    <li><a>About Us</a></li>
-                </ul>
-            </nav>
-            <nav class="bottom-nav-container">
-                <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/sports.html">SPORTS</a></li>
-                    <li><a href="/culture.html">CULTURE</a></li>
-                    <li><a href="/politics.html">POLITICS</a></li>
-                    <li><a href="/tech.html">TECH</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="entire-page-wrapper">
+        <header>
+            <div class="header-content-wrapper">
+                <h1 class="page-title">World Magazine</h1>
+                <nav class="top-nav-container">
+                    <ul>
+                        <li><a>Search</a></li>
+                        <li><a>Log In</a></li>
+                        <li><a>Magazine</a></li>
+                        <li><a>Newsletter</a></li>
+                        <li><a>About Us</a></li>
+                    </ul>
+                </nav>
+                <nav class="bottom-nav-container">
+                    <ul>
+                        <li><a href="/index.html">HOME</a></li>
+                        <li><a href="/sports.html">SPORTS</a></li>
+                        <li><a href="/culture.html">CULTURE</a></li>
+                        <li><a href="/politics.html">POLITICS</a></li>
+                        <li><a href="/tech.html">TECH</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <footer>
-        <div class="footer-content-wrapper">
-            <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-            <h1 class="footer-title">World Magazine</h1>
-            <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+        <main>
+            <div class="individual-site-wrapper">
+                <div class="individual-story nasa-story">
+                    <h2 class="individual-title">Major Discovery by NASA on Mars</h2>
+                    <img src="/pictures/Perseverence.jpg" alt="Perseverence">
+                    <p class="sub-title-text">Unlocking the Secrets of the Red Planet: A New Milestone for NASA. Delving
+                        into the enigmatic world of Mars has long captivated humanity's curiosity. In a potential
+                        groundbreaking
+                        leap forward.</p>
 
-        </div>
-    </footer>
+                    <h3 class="article-title">Introduction</h3>
+                    <p class="article-text">In a monumental leap for space exploration, NASA has announced a major
+                        discovery
+                        on Mars, shedding new light on the enigmatic Red Planet. This article unravels the details of
+                        this
+                        groundbreaking find and its potential implications for our understanding of Mars and the
+                        prospects
+                        of future human exploration.
+                    </p>
+
+                    <h3 class="article-title">A Game-Changing Discovery: NASA's Triumph on Mars</h3>
+                    <p class="article-text">NASA, the United States' premier space agency, has made an awe-inspiring
+                        discovery on Mars, one that has set the scientific community abuzz with excitement. The
+                        revelation
+                        represents a significant leap forward in our exploration of the Martian landscape and its
+                        history.
+                    </p>
+
+                    <h3 class="article-title">Hints of Life? The Speculation Begins</h3>
+                    <p class="article-text">While the exact nature of the discovery has been kept under wraps pending
+                        further analysis, early indications suggest that it may be linked to the possibility of life,
+                        past
+                        or present, on Mars. Scientists and space enthusiasts are eagerly awaiting more information to
+                        ascertain the potential implications of this revelation.
+                    </p>
+
+                    <h3 class="article-title">Perseverance Rover: The Trailblazer of Discovery</h3>
+                    <p class="article-text">NASA's Perseverance rover, a marvel of modern engineering, has played a
+                        pivotal
+                        role in this discovery. The rover, equipped with advanced scientific instruments, has been
+                        tirelessly exploring the Martian surface, seeking clues about the planet's geological history,
+                        climate, and potential for life.
+                    </p>
+
+                    <h3 class="article-title">The Mars Sample Return Mission: A Future Endeavor</h3>
+                    <p class="article-text">This significant discovery amplifies the urgency and importance of NASA's
+                        Mars
+                        Sample Return mission, which aims to collect Martian samples and return them to Earth for
+                        comprehensive analysis. The findings from this mission have the potential to revolutionize our
+                        understanding of Mars and provide valuable insights for planning future human missions to the
+                        Red
+                        Planet.
+                    </p>
+
+                    <h3 class="article-title">International Collaboration: A Shared Quest for Knowledge</h3>
+                    <p class="article-text">Space exploration is a global endeavor, and this discovery emphasizes the
+                        importance of international collaboration. Scientists from various countries are working
+                        together to
+                        unravel the mysteries of Mars, transcending borders and pooling their expertise for the
+                        collective
+                        advancement of humanity's knowledge.
+                    </p>
+
+                    <h3 class="article-title">Conclusion</h3>
+                    <p class="article-text">NASA's major discovery on Mars marks a historic milestone in the ongoing
+                        quest
+                        to unlock the secrets of our neighboring planet. As the scientific community eagerly awaits
+                        further
+                        details, it is evident that this revelation has the potential to reshape our understanding of
+                        Mars
+                        and, quite possibly, the fundamental question of whether life ever existed on this distant
+                        world.
+                        The journey of discovery continues, and with each revelation, we inch closer to the day when
+                        humans
+                        may call Mars a second home.
+                    </p>
+
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div class="footer-content-wrapper">
+                <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+                <h1 class="footer-title">World Magazine</h1>
+                <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
