--- a/individualstories/nicaraguastory.html
+++ b/individualstories/nicaraguastory.html
@@ -5,42 +5,105 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Politics</title>
+    <title>Nicaragua</title>
 </head>
 
 <body>
-    <header>
-        <div class="header-content-wrapper">
-            <h1 class="page-title">World Magazine</h1>
-            <nav class="top-nav-container">
-                <ul>
-                    <li><a>Search</a></li>
-                    <li><a>Log In</a></li>
-                    <li><a>Magazine</a></li>
-                    <li><a>Newsletter</a></li>
-                    <li><a>About Us</a></li>
-                </ul>
-            </nav>
-            <nav class="bottom-nav-container">
-                <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/sports.html">SPORTS</a></li>
-                    <li><a href="/culture.html">CULTURE</a></li>
-                    <li><a href="/politics.html">POLITICS</a></li>
-                    <li><a href="/tech.html">TECH</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="entire-page-wrapper">
+        <header>
+            <div class="header-content-wrapper">
+                <h1 class="page-title">World Magazine</h1>
+                <nav class="top-nav-container">
+                    <ul>
+                        <li><a>Search</a></li>
+                        <li><a>Log In</a></li>
+                        <li><a>Magazine</a></li>
+                        <li><a>Newsletter</a></li>
+                        <li><a>About Us</a></li>
+                    </ul>
+                </nav>
+                <nav class="bottom-nav-container">
+                    <ul>
+                        <li><a href="/index.html">HOME</a></li>
+                        <li><a href="/sports.html">SPORTS</a></li>
+                        <li><a href="/culture.html">CULTURE</a></li>
+                        <li><a href="/politics.html">POLITICS</a></li>
+                        <li><a href="/tech.html">TECH</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <footer>
-        <div class="footer-content-wrapper">
-            <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-            <h1 class="footer-title">World Magazine</h1>
-            <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+        <main>
+            <div class="individual-site-wrapper">
+                <div class="individual-story nicaragua-story">
+                    <h2 class="individual-title">Potentially the Biggest Political Scandal in the History of Nicaragua
+                    </h2>
+                    <img src="/pictures/nicaragua.jpg" alt="nicaragua">
+                    <p class="sub-title-text">The call for Nicaragua to evolve into the democracy its citizens yearn
+                        for has reached a pivotal moment. The nation stands at a crossroads, where the aspirations of
+                        the people for a truly free and transparent democratic system.</p>
 
-        </div>
-    </footer>
+                    <h3 class="article-title">Introduction</h3>
+                    <p class="article-text">Nicaragua finds itself at a critical juncture as what could be the most
+                        significant political scandal in its history unfolds. The nation is witnessing widespread
+                        protests as its citizens take to the streets, demanding a transformation into the free democracy
+                        they desire. This article delves into the unfolding events, the sentiments of the Nicaraguan
+                        people, and the urgency for a democratic future.</p>
+
+                    <h3 class="article-title">Uncovering the Scandal: A Political Earthquake</h3>
+                    <p class="article-text">Recent revelations have shaken the political landscape of Nicaragua,
+                        potentially marking this as one of the most significant scandals the nation has ever faced. The
+                        details are emerging, leaving the citizens stunned and prompting them to question the very
+                        fabric of their government and its actions.</p>
+
+                    <h3 class="article-title">The People's Outcry: Protests for a Democratic Nicaragua</h3>
+                    <p class="article-text">In response to the political scandal, the Nicaraguan people have taken to
+                        the streets in unprecedented numbers. Their collective voice resounds with a call for change,
+                        urging their nation to embrace the principles of democracy and freedom. The protests reflect a
+                        unified desire for a government that represents their interests and respects their rights.</p>
+
+                    <h3 class="article-title">A Nation in Need of Transformation</h3>
+                    <p class="article-text">Nicaragua stands at a crossroads, and the aspirations of its citizens are
+                        clear. They seek a future where democratic values, freedom of expression, and fair governance
+                        form the pillars of society. The current scandal has only heightened their resolve to bring
+                        about this transformation and ensure a government accountable to the people.</p>
+
+                    <h3 class="article-title">International Community's Watchful Eye</h3>
+                    <p class="article-text">The global community is closely monitoring the events unfolding in
+                        Nicaragua. The call for democracy and the right to voice concerns resonates with people
+                        worldwide. International organizations and governments are urging for a peaceful resolution and
+                        a fair investigation into the alleged political scandal.</p>
+
+                    <h3 class="article-title">A Vision for a Democratic Future</h3>
+                    <p class="article-text">Amidst the turmoil, a vision for a democratic Nicaragua emerges, buoyed by
+                        the determination of its people. A future where their voices matter, where their votes count,
+                        and where their aspirations shape the nation's course. The path forward involves dialogue,
+                        understanding, and a collective effort to realize the democratic dreams of the Nicaraguan
+                        population.</p>
+
+                    <h3 class="article-title">Conclusion</h3>
+                    <p class="article-text">The unfolding political scandal in Nicaragua has unleashed a wave of
+                        protests and demands for a brighter, democratic future. The citizens passionately advocate for
+                        change, emphasizing their desire for a government that embodies the principles of freedom,
+                        accountability, and representation. As the world watches, it is imperative that the voices of
+                        the Nicaraguan people are heard, and steps are taken to address their legitimate aspirations for
+                        a free and democratic society.</p>
+
+
+                </div>
+            </div>
+        </main>
+
+        <footer>
+            <div class="footer-content-wrapper">
+                <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+                <h1 class="footer-title">World Magazine</h1>
+                <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
