--- a/individualstories/soccerstory.html
+++ b/individualstories/soccerstory.html
@@ -5,42 +5,105 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Politics</title>
+    <title>Soccer</title>
 </head>
 
 <body>
-    <header>
-        <div class="header-content-wrapper">
-            <h1 class="page-title">World Magazine</h1>
-            <nav class="top-nav-container">
-                <ul>
-                    <li><a>Search</a></li>
-                    <li><a>Log In</a></li>
-                    <li><a>Magazine</a></li>
-                    <li><a>Newsletter</a></li>
-                    <li><a>About Us</a></li>
-                </ul>
-            </nav>
-            <nav class="bottom-nav-container">
-                <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/sports.html">SPORTS</a></li>
-                    <li><a href="/culture.html">CULTURE</a></li>
-                    <li><a href="/politics.html">POLITICS</a></li>
-                    <li><a href="/tech.html">TECH</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="entire-page-wrapper">
+        <header>
+            <div class="header-content-wrapper">
+                <h1 class="page-title">World Magazine</h1>
+                <nav class="top-nav-container">
+                    <ul>
+                        <li><a>Search</a></li>
+                        <li><a>Log In</a></li>
+                        <li><a>Magazine</a></li>
+                        <li><a>Newsletter</a></li>
+                        <li><a>About Us</a></li>
+                    </ul>
+                </nav>
+                <nav class="bottom-nav-container">
+                    <ul>
+                        <li><a href="/index.html">HOME</a></li>
+                        <li><a href="/sports.html">SPORTS</a></li>
+                        <li><a href="/culture.html">CULTURE</a></li>
+                        <li><a href="/politics.html">POLITICS</a></li>
+                        <li><a href="/tech.html">TECH</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <footer>
-        <div class="footer-content-wrapper">
-            <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-            <h1 class="footer-title">World Magazine</h1>
-            <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+        <main>
+            <div class="individual-site-wrapper">
+                <div class="individual-story soccer-story">
+                    <h2 class="individual-title">Spain Emerges Victorious: Defeats England 1-0 in Women's World Cup
+                        Finals</h2>
+                    <img src="/pictures/spainteam.jpg" alt="spainteam">
+                    <p class="sub-title-text">In a historic clash on the global stage of women's football, Spain emerged
+                        victorious, securing a remarkable 1-0 win against England in the final of the Women's World Cup.
+                    </p>
 
-        </div>
-    </footer>
+                    <h3 class="article-title">Introduction</h3>
+                    <p class="article-text">In a thrilling finale, Spain secured a historic victory in the Women's World
+                        Cup, defeating England 1-0. The match was a showcase of skill, determination, and teamwork, and
+                        this article highlights the electrifying showdown, celebrating Spain's triumph on the
+                        international stage.</p>
+
+                    <h3 class="article-title">The Pinnacle of Women's Football: A High-Stakes Final</h3>
+                    <p class="article-text">The Women's World Cup final was a highly anticipated match, bringing
+                        together two powerhouses of women's football, Spain and England. The energy was palpable as both
+                        teams vied for the ultimate glory, displaying exceptional sportsmanship and dedication to the
+                        sport.</p>
+
+                    <h3 class="article-title">Spain's Triumph: A Nail-biting Victory</h3>
+                    <p class="article-text">In a tightly contested battle, Spain emerged victorious, clinching the title
+                        with a 1-0 score against England. The victory was a testament to their skill, strategy, and
+                        unyielding determination. The single goal that secured their triumph sent waves of celebration
+                        through the Spanish team and its fans.</p>
+
+                    <h3 class="article-title">The Heroic Goal: A Game-Changing Moment</h3>
+                    <p class="article-text">The winning goal that sealed Spain's victory will be etched in the annals of
+                        Women's World Cup history. It was a moment of brilliance, showcasing the immense talent and
+                        precision of the Spanish team. Their perseverance and teamwork were evident, demonstrating the
+                        essence of football as a collective effort.</p>
+
+                    <h3 class="article-title">Celebrating Women's Football: A Global Phenomenon</h3>
+                    <p class="article-text">The Women's World Cup serves as a platform to celebrate the talent,
+                        dedication, and sportsmanship of female athletes. The competition not only showcases exceptional
+                        football but also emphasizes the growth and increasing prominence of women's sports on the
+                        global stage.</p>
+
+                    <h3 class="article-title">Future of Women's Football: Inspiring Generations</h3>
+                    <p class="article-text">Spain's victory in the Women's World Cup has ignited enthusiasm and
+                        inspiration among aspiring female footballers around the world. Their triumph stands as a beacon
+                        of hope, encouraging young athletes to pursue their passion and strive for excellence in the
+                        beautiful game.</p>
+
+                    <h3 class="article-title">Conclusion</h3>
+                    <p class="article-text">Spain's historic triumph against England in the Women's World Cup final was
+                        a thrilling spectacle, a testament to their skill, determination, and teamwork. The match
+                        highlighted the pinnacle of women's football and showcased the growth of the sport on the global
+                        stage. As the celebrations continue, the victory will undoubtedly inspire generations of
+                        aspiring female footballers to chase their dreams and make their mark in the world of football.
+                    </p>
+
+
+                </div>
+            </div>
+        </main>
+
+
+
+        <footer>
+            <div class="footer-content-wrapper">
+                <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+                <h1 class="footer-title">World Magazine</h1>
+                <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
