--- a/individualstories/trumpfraudstory.html
+++ b/individualstories/trumpfraudstory.html
@@ -5,42 +5,117 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Politics</title>
+    <title>Trump</title>
 </head>
 
 <body>
-    <header>
-        <div class="header-content-wrapper">
-            <h1 class="page-title">World Magazine</h1>
-            <nav class="top-nav-container">
-                <ul>
-                    <li><a>Search</a></li>
-                    <li><a>Log In</a></li>
-                    <li><a>Magazine</a></li>
-                    <li><a>Newsletter</a></li>
-                    <li><a>About Us</a></li>
-                </ul>
-            </nav>
-            <nav class="bottom-nav-container">
-                <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/sports.html">SPORTS</a></li>
-                    <li><a href="/culture.html">CULTURE</a></li>
-                    <li><a href="/politics.html">POLITICS</a></li>
-                    <li><a href="/tech.html">TECH</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="entire-page-wrapper">
+        <header>
+            <div class="header-content-wrapper">
+                <h1 class="page-title">World Magazine</h1>
+                <nav class="top-nav-container">
+                    <ul>
+                        <li><a>Search</a></li>
+                        <li><a>Log In</a></li>
+                        <li><a>Magazine</a></li>
+                        <li><a>Newsletter</a></li>
+                        <li><a>About Us</a></li>
+                    </ul>
+                </nav>
+                <nav class="bottom-nav-container">
+                    <ul>
+                        <li><a href="/index.html">HOME</a></li>
+                        <li><a href="/sports.html">SPORTS</a></li>
+                        <li><a href="/culture.html">CULTURE</a></li>
+                        <li><a href="/politics.html">POLITICS</a></li>
+                        <li><a href="/tech.html">TECH</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <footer>
-        <div class="footer-content-wrapper">
-            <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-            <h1 class="footer-title">World Magazine</h1>
-            <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
 
-        </div>
-    </footer>
+        <main>
+            <div class="individual-site-wrapper">
+                <div class="individual-story trump-story">
+                    <h2 class="individual-title">Trump Charged with 19 Counts of Fraud</h2>
+                    <img src="/pictures/trump.jpg" alt="apple">
+                    <p class="sub-title-text">
+                        In the midst of political upheaval and legal scrutiny, a legal tempest gathers momentum as
+                        accusations and allegations converge upon the former President, Donald Trump. The atmosphere
+                        surrounding his past actions and decisions has turned tumultuous.
+                    </p>
+                    <h3 class="article-title">Introduction</h3>
+                    <p class="article-text">
+                        In a stunning turn of events, former President Donald Trump has been charged with 19 counts of
+                        fraud, sending shockwaves through the political landscape of the United States. This article
+                        provides an in-depth look at the allegations, their potential ramifications, and the broader
+                        implications for American politics.
+                    </p>
+
+                    <h3 class="article-title">The Allegations: A Detailed Overview</h3>
+                    <p class="article-text">
+                        The charges leveled against Donald Trump encompass a total of 19 counts of fraud, which include
+                        financial improprieties and alleged manipulation of various business transactions. The charges
+                        stem from a comprehensive investigation into the financial dealings of the former president,
+                        examining a range of activities and transactions over several years.
+                    </p>
+
+                    <h3 class="article-title">Legal Implications: The Weight of the Charges</h3>
+                    <p class="article-text">
+                        Fraud charges carry significant legal weight and potential consequences. If proven true, these
+                        allegations could lead to severe penalties, including fines, imprisonment, or both. The legal
+                        process will unfold as both the prosecution and defense present their cases, providing an
+                        opportunity for a thorough examination of the evidence.
+                    </p>
+
+                    <h3 class="article-title">The Public's Reaction: A Divided Nation</h3>
+                    <p class="article-text">
+                        As news of the charges spreads across the nation, the American public remains deeply divided in
+                        its response. Supporters of Donald Trump argue that the charges are politically motivated, while
+                        critics maintain that no individual, regardless of their status or position, should be above the
+                        law. The case has ignited impassioned debates on social media and in public discourse.
+                    </p>
+
+                    <h3 class="article-title">Political Fallout: Shaping the Landscape</h3>
+                    <p class="article-text">The charges against a former U.S. president have far-reaching political
+                        implications. They raise questions about the conduct of leaders, accountability, and the
+                        democratic principles that underpin the nation. The outcome of this case may influence public
+                        trust in the political system and impact future elections, emphasizing the importance of due
+                        process and impartiality.</p>
+
+                    <h3 class="article-title">The Legal Process: What Lies Ahead</h3>
+                    <p class="article-text">In the coming months, legal proceedings will unfold, allowing both the
+                        prosecution and defense to present their arguments and evidence. The nation will watch as the
+                        judicial system navigates this complex case, setting a precedent for how the U.S. legal system
+                        handles charges against high-profile political figures.</p>
+
+                    <h3 class="article-title">Conclusion</h3>
+                    <p class="article-text">The charges against former President Donald Trump mark a significant
+                        development in American politics. The legal process will unfold, and the nation will await the
+                        outcome of the case with bated breath. This case underscores the importance of upholding the
+                        rule of law, ensuring that all individuals, regardless of their status, are held accountable for
+                        their actions. As the proceedings continue, it remains imperative to prioritize transparency,
+                        due process, and the integrity of the legal system, reinforcing the principles that form the
+                        bedrock of the United States.
+                    </p>
+
+
+
+                </div>
+            </div>
+        </main>
+
+
+        <footer>
+            <div class="footer-content-wrapper">
+                <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+                <h1 class="footer-title">World Magazine</h1>
+                <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
