--- a/individualstories/ukrainestory.html
+++ b/individualstories/ukrainestory.html
@@ -5,42 +5,115 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Politics</title>
+    <title>Ukraine</title>
 </head>
 
 <body>
-    <header>
-        <div class="header-content-wrapper">
-            <h1 class="page-title">World Magazine</h1>
-            <nav class="top-nav-container">
-                <ul>
-                    <li><a>Search</a></li>
-                    <li><a>Log In</a></li>
-                    <li><a>Magazine</a></li>
-                    <li><a>Newsletter</a></li>
-                    <li><a>About Us</a></li>
-                </ul>
-            </nav>
-            <nav class="bottom-nav-container">
-                <ul>
-                    <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/sports.html">SPORTS</a></li>
-                    <li><a href="/culture.html">CULTURE</a></li>
-                    <li><a href="/politics.html">POLITICS</a></li>
-                    <li><a href="/tech.html">TECH</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="entire-page-wrapper">
+        <header>
+            <div class="header-content-wrapper">
+                <h1 class="page-title">World Magazine</h1>
+                <nav class="top-nav-container">
+                    <ul>
+                        <li><a>Search</a></li>
+                        <li><a>Log In</a></li>
+                        <li><a>Magazine</a></li>
+                        <li><a>Newsletter</a></li>
+                        <li><a>About Us</a></li>
+                    </ul>
+                </nav>
+                <nav class="bottom-nav-container">
+                    <ul>
+                        <li><a href="/index.html">HOME</a></li>
+                        <li><a href="/sports.html">SPORTS</a></li>
+                        <li><a href="/culture.html">CULTURE</a></li>
+                        <li><a href="/politics.html">POLITICS</a></li>
+                        <li><a href="/tech.html">TECH</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <footer>
-        <div class="footer-content-wrapper">
-            <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-            <h1 class="footer-title">World Magazine</h1>
-            <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+        <main>
+            <div class="individual-site-wrapper">
+                <div class="individual-story ukraine-story">
+                    <h2 class="individual-title">Late Last Night: Eastern Ukraine Under Relentless Shelling</h2>
+                    <img src="/pictures/putin.jpg" alt="putin">
+                    <p class="sub-title-text">Late last night eastern parts of Ukraine got shelled
+                        continously for several hours. "Every day is a struggle, we
+                        need more weapons ammo and supplies" -- Zelensky</p>
 
-        </div>
-    </footer>
+                    <h3 class="article-title">Introduction</h3>
+                    <p class="article-text">In a distressing turn of events, the eastern parts of Ukraine witnessed an
+                        onslaught of continuous shelling late last night, a brutal reminder of the ongoing conflict with
+                        Russia. This article sheds light on the recent developments, President Zelensky's plea for
+                        assistance, and the pressing need for international attention and support to mitigate the
+                        suffering of the Ukrainian people.</p>
+
+                    <h3 class="article-title">Escalating Violence: A Grim Reality</h3>
+                    <p class="article-text">The situation in Ukraine has been steadily deteriorating, with eastern
+                        regions being the epicenter of the conflict against Russian forces. The shelling, which lasted
+                        for several hours, struck populated areas, leaving innocent civilians in a state of terror and
+                        distress. The violence exacerbates an already dire humanitarian situation and further
+                        underscores the urgency for peace and stability in the region.</p>
+
+                    <h3 class="article-title">Zelensky's Plea for Assistance</h3>
+                    <p class="article-text">President Volodymyr Zelensky, facing the grim reality of the situation, made
+                        a heartfelt plea for more support. "Every day is a struggle; we need more weapons, ammo, and
+                        supplies," emphasized Zelensky, reflecting the urgency and desperation of the situation on the
+                        ground. The international community must heed this call for assistance and take immediate action
+                        to address the crisis caused by the Russian aggression.</p>
+
+                    <h3 class="article-title">Humanitarian Impact: A Cry for Help</h3>
+                    <p class="article-text">The relentless shelling has left a devastating humanitarian impact,
+                        displacing countless families and causing widespread fear and trauma among the affected
+                        population. Civilians, including women and children, are enduring unimaginable suffering. Urgent
+                        humanitarian aid is vital to alleviate their plight and ensure their safety and well-being
+                        amidst the ongoing conflict with Russian forces.</p>
+
+                    <h3 class="article-title">International Community's Response</h3>
+                    <p class="article-text">The international community must rally together to address this urgent
+                        humanitarian and security crisis. Increased diplomatic efforts and pressure on Russia are
+                        crucial to cease hostilities and initiate meaningful dialogue for a peaceful resolution.
+                        Sanctions, peacekeeping efforts, and negotiations should be prioritized to ease tensions and
+                        bring an end to the suffering of the Ukrainian people in the face of Russian aggression.</p>
+
+                    <h3 class="article-title">The Path to Peace: A Collective Responsibility</h3>
+                    <p class="article-text">Peace remains the ultimate goal in Ukraine, and achieving it requires
+                        concerted efforts from all stakeholders involved. The road to peace necessitates a commitment to
+                        dialogue, diplomacy, and compromise. Now, more than ever, it is imperative that the global
+                        community stands united in its pursuit of peace and works tirelessly to alleviate the suffering
+                        of those caught in the crossfire of the conflict with Russian forces.</p>
+
+                    <h3 class="article-title">Conclusion</h3>
+                    <p class="article-text">The recent relentless shelling in eastern Ukraine has further exacerbated
+                        the ongoing conflict against Russian forces, amplifying the humanitarian crisis and prompting an
+                        impassioned plea from President Zelensky for international assistance. The urgent need for
+                        peace, increased humanitarian aid, and diplomatic efforts is paramount to protect the lives and
+                        well-being of innocent civilians in Ukraine. As the world watches the events unfolding in
+                        Ukraine, it is imperative that we prioritize peace and take immediate action to alleviate the
+                        suffering of the Ukrainian people in the face of aggression from Russia.</p>
+
+                    <h3 class="article-title"></h3>
+                    <p class="article-text"></p>
+
+                    <h3 class="article-title"></h3>
+                    <p class="article-text"></p>
+
+                </div>
+            </div>
+        </main>
+
+
+        <footer>
+            <div class="footer-content-wrapper">
+                <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+                <h1 class="footer-title">World Magazine</h1>
+                <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
