--- a/sports.html
+++ b/sports.html
@@ -9,38 +9,127 @@
 </head>
 
 <body>
-  <header>
-    <div class="header-content-wrapper">
-      <h1 class="page-title">World Magazine</h1>
-      <nav class="top-nav-container">
-        <ul>
-          <li><a>Search</a></li>
-          <li><a>Log In</a></li>
-          <li><a>Magazine</a></li>
-          <li><a>Newsletter</a></li>
-          <li><a>About Us</a></li>
-        </ul>
-      </nav>
-      <nav class="bottom-nav-container">
-        <ul>
-          <li><a href="/index.html">HOME</a></li>
-          <li><a href="/sports.html">SPORTS</a></li>
-          <li><a href="/culture.html">CULTURE</a></li>
-          <li><a href="/politics.html">POLITICS</a></li>
-          <li><a href="/tech.html">TECH</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <div class="entire-page-wrapper">
+    <header>
+      <div class="header-content-wrapper">
+        <h1 class="page-title">World Magazine</h1>
+        <nav class="top-nav-container">
+          <ul>
+            <li><a>Search</a></li>
+            <li><a>Log In</a></li>
+            <li><a>Magazine</a></li>
+            <li><a>Newsletter</a></li>
+            <li><a>About Us</a></li>
+          </ul>
+        </nav>
+        <nav class="bottom-nav-container">
+          <ul>
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/sports.html">SPORTS</a></li>
+            <li><a href="/culture.html">CULTURE</a></li>
+            <li><a href="/politics.html">POLITICS</a></li>
+            <li><a href="/tech.html">TECH</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-  <footer>
-    <div class="footer-content-wrapper">
-      <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-      <h1 class="footer-title">World Magazine</h1>
-      <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+    <main>
+      <div class="site-wrapper">
+        <div class="main-content-wrapper">
 
-    </div>
-  </footer>
+          <div class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="individualstories/soccerstory.html">
+                <h2 class="story-title">
+                  Spain beats England 1-0 in the finals of the world cup
+                </h2>
+                <span class="story-info">In a historic clash on the global stage of women's football, Spain emerged
+                  victorious, securing a remarkable 1-0 win against England in the final of the Women's World Cup.
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/sports.html">Sports</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="pictures/spainteam.jpg" alt="Spain national team" />
+              <figcaption class="story-caption">
+                Spain National Team
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="/individualstories/sailingstory.html">
+                <h2 class="story-title">
+                  Team USA Wins the Biggest Sailing Competition in the World
+                </h2>
+                <span class="story-info">
+                  In a thrilling display of sailing prowess and teamwork, Team USA has emerged victorious at the World
+                  Cup, marking a historic achievement in the realm of competitive sailing. The event was a true test of
+                  skill and strategy.
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/sports.html">Sports</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="/pictures/sailing.jpg" alt="sailing">
+              <figcaption class="story-caption">
+                USA sailing
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="/individualstories/golfstory.html">
+                <h2 class="story-title">
+                  Swedish Golfer Ludvig Åberg Wins the DP World Tour Competition in France
+                </h2>
+                <span class="story-info">
+                  In a remarkable and memorable event in the world of golf, Swedish prodigy Ludvig Åberg clinched his
+                  inaugural victory on the professional circuit, marking a significant milestone in his burgeoning
+                  career.
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/sports.html">Sports</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="pictures/ludvigåberg.jpg" alt="ludvigåberg">
+              <figcaption class="story-caption">
+                Ludvig Åberg
+              </figcaption>
+            </figure>
+          </div>
+
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="footer-content-wrapper">
+        <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+        <h1 class="footer-title">World Magazine</h1>
+        <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
